--- a/style.css
+++ b/style.css
@@ -42,3 +42,22 @@ body {
 .font-list:hover {
     display: flex;
 }
+
+.input {
+    margin: 16px auto;
+    font-size: 16px;
+    background-color: black;
+    border: none;
+    color: white;
+}
+
+.font-size {
+    width: 40px;
+    border: 1px solid yellow;
+    padding: 0 10px;
+    margin-left: 20px;
+}
+
+#font-size {
+    width: 40px;
+}
